added openApi comments for movie's handlers
